# clara-automation

./: .gitignore  Dockerfile.n8n  README.md  api_wrapper.py  docker-compose.yml  pyproject.toml
outputs/accounts/ben_electric/: changelog.txt
outputs/accounts/ben_electric/v1/: agent_spec.json  v1.json
outputs/accounts/ben_electric/v2/: agent_spec.json  v2.json
scripts/: process_call.py  run_process_call.sh  streamlit_diff_viewer.py
workflows/: clara_workflow.json
